[tool.poetry]
authors = ["Daniel CAUNE <daniel.caune@thelittlehackers.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
description = "Python utility library for processing photo files"
keywords = ["exfi", "library", "photo", "utils"]
license = "MIT License"
name = "thelittlehackers-photo-utility"
packages = [{include = "thelittlehackers", from = "src"}]
readme = "README.md"
repository = "https://github.com/the-little-hackers/library_photo-utility_python"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.12"
exifread = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
